@@ -2,6 +2,8 @@ package icd.onboarding.surveyproject.service.domain;
 
 import icd.onboarding.surveyproject.service.exception.InSufficientQuestionException;
 import icd.onboarding.surveyproject.service.exception.InValidSurveyInfoException;
+import icd.onboarding.surveyproject.service.exception.MaxQuestionCountExceededException;
+import io.micrometer.common.util.StringUtils;
 import lombok.Getter;
 
 import java.util.Collections;
@@ -16,6 +18,8 @@ public class Survey {
 
 	private List<Question> questions;
 
+	private static final int MAX_QUESTION_COUNT = 10;
+
 	private Survey (String title, String description, List<Question> questions) {
 		this.title = title;
 		this.description = description;
@@ -28,10 +32,12 @@ public class Survey {
 	}
 
 	public static Survey create (String title, String description, List<Question> questions) {
-		if (title == null || title.isBlank())
+		if (StringUtils.isBlank(title))
 			throw new InValidSurveyInfoException();
 		if (questions == null || questions.isEmpty())
 			throw new InSufficientQuestionException();
+		if (questions.size() > MAX_QUESTION_COUNT)
+			throw new MaxQuestionCountExceededException();
 
 		return new Survey(title, description, questions);
 	}
